<?xml version="1.0" encoding="utf-8"?>

<!--

Copyright 2014 ATOS SPAIN S.A.

Licensed under the Apache License, Version 2.0 (the License);
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

Authors :
Sergio García Villalonga. Atos Research and Innovation, Atos SPAIN SA
@email sergio.garciavillalonga@atos.net

 -->

<resources>
    <string name="app_name">BETaaS</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="add_gateway">Add new gateway</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="delete_gateway">Delete gateway</string>
    <string name="edit_gateway">Edit gateway</string>
    <string name="no_internet">There is a connection problem. Check if you are connected on a network and restart the app.</string>
    <string name="ok">OK</string>
    <string name="registering_app">Registering app in</string>
    <string name="subscribing_service">Subscribing to service in %1$s</string>
    <string name="app_id">App id:</string>
    <string name="service_id">Service id:</string>
    <string name="last_update">Last update:</string>
	<string name="relax">Relax, no one is at home</string>
    <string name="caution">Caution! There is someone at home</string>
</resources>
